# math-telegram-bot

./: main.py  pyproject.toml  sample.env  settings.py
docs/: database.dbml
src/: states.py
src/auth/: login.py  utils.py
src/db/: helpers.py  models.py  utils.py
src/db/transactions/: competition.py  user.py
src/error_codes/: db.py
src/handlers/: commons.py  login_handlers.py  new_competirion_handers.py
