[project]
name = "math-telegram-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Mamad Zahiri", email = "mamadzhri@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "peewee (>=3.17.9,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "math_telegram_bot", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
