[project]
name = "math-telegram-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Mamad Zahiri", email = "mamadzhri@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "peewee (>=3.17.9,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "types-peewee (>=3.17.9.20250308,<4.0.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "choice-enum (>=1.0.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "math_telegram_bot", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["."]
line-length = 100
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    # "D",
    "ANN",
    "ICN",
    "COM",
    "LOG",
    "G",
    "SIM",
    "ERA",
    "PL",
    "FAST",
    "RET",
    "RUF",
    "TID",
]
ignore = ["ANN001", "D407", "D413", "D406"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
